packages/survey-core/src/default-theme/blocks/sd-paneldynamic.scss
@use "../variables.scss" as *;

.sd-paneldynamic {
    .sd-progress {
        position: absolute;
        left: 0;
        right: 0;
        height: 2px;
        z-index: 2;
        transform: translateY(-1px);
    }

    & > .sd-panel {
        padding-top: 1px;
        padding-bottom: calc(0.5 * var(--sd-base-vertical-padding));
    }

    & .sd-paneldynamic__panel-wrapper > .sd-panel > .sd-panel__header {
        padding-top: var(--sd-base-vertical-padding);
        padding-bottom: 0;

        &:after {
            display: none;
        }

        & > .sd-panel__title {
            color: $foreground-light;
        }
    }
}

.sd-paneldynamic__header {
  padding: var(--sjs2-layout-component-panel-header-padding-vertical, var(--sjs2-spacing-x400)) var(--sjs2-layout-component-panel-header-padding-horizontal, var(--sjs2-layout-component-panel-content-area-padding-horizontal));
  gap: var(--sjs2-layout-component-panel-header-gap-vertical, var(--sjs2-spacing-x050));
}

.sd-paneldynamic__footer {
    clear: both;
    padding: var(--sjs2-layout-component-panel-footer-padding-vertical, var(--sjs2-spacing-x300)) var(--sjs2-layout-component-panel-footer-padding-horizontal, var(--sjs2-layout-component-panel-content-area-padding-horizontal));
    gap: var(--sjs2-layout-component-panel-footer-gap-vertical, var(--sjs2-spacing-x050));
    position: relative;

    .sd-paneldynamic__progress-text,
    .sd-paneldynamic__progress--bottom {
        display: initial;
    }
}

.sd-root-modern--mobile {
    .sd-paneldynamic__header {
        padding: var(--sjs2-layout-component-panel-header-padding-vertical, var(--sjs2-spacing-x400)) var(--sjs2-layout-component-panel-header-padding-horizontal, var(--sjs2-spacing-x300));
    }
    .sd-paneldynamic__footer {
        padding: var(--sjs2-layout-component-panel-footer-padding-vertical, var(--sjs2-spacing-x100)) var(--sjs2-layout-component-panel-footer-padding-horizontal, var(--sjs2-spacing-x300));
    }
    .sd-paneldynamic__panel-footer {
        padding: var(--sjs2-layout-component-panel-footer-padding-vertical, var(--sjs2-spacing-x200)) var(--sjs2-layout-component-panel-footer-padding-horizontal, var(--sjs2-spacing-x200));
        margin-right: calc(1.5 * var(--sjs2-spacing-negative-x050));
        margin-top: calc(var(--sjs2-spacing-negative-x400));
    }
}

.sd-question--readonly,
.sd-question--preview {
    .sd-paneldynamic .sd-question__placeholder {
        color: $foreground;
    }
}
// .sd-paneldynamic__panel-wrapper {
//     box-sizing: border-box;
//     padding-bottom: calc(1 * var(--sd-base-padding));
// }

.sd-paneldynamic__panel-wrapper:after {
    display: table;
    clear: both;
    content: " ";
}

.sd-paneldynamic__separator {
    display: none;
}
.sd-paneldynamic__footer .sd-paneldynamic__separator,
.sd-paneldynamic__panel-wrapper--list ~ .sd-paneldynamic__panel-wrapper--list:before {
    content: " ";
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    margin: 0;
    border-color: $border-light;
    background: $border-light;
    height: 1px;
    border: none;
}
.sd-paneldynamic__separator:only-child {
    display: none;
}

.sd-paneldynamic__panel-wrapper--in-row.sd-paneldynamic__panel-wrapper--in-row {
    display: flex;
    flex-direction: row;
    align-items: center;
    position: relative;

    &:before {
        top: 0;
        left: calc(-1 * var(--sd-base-padding));
        right: calc(-1 * var(--sd-base-padding));
    }
}

.sd-paneldynamic__buttons-container {
    display: flex;
    align-items: center;
    // padding: calc(var(--sd-base-vertical-padding) - var(--sjs2-spacing-x100)) 0;
}

.sd-paneldynamic__progress-text {
    font-size: $font-questiontitle-size;
    line-height: multiply(1.5, $font-questiontitle-size);
    color: $font-questiondescription-color;
    margin: 0;
    margin-right: calc(var(--sjs2-spacing-x150) + var(--sjs2-spacing-x025));
}

.sd-paneldynamic__placeholder {
    .sd-action-bar--empty {
        margin-top: var(--sjs2-spacing-negative-x050);
    }
}

.sd-question--empty.sd-question--paneldynamic {
    & > .sd-question__content {
        padding-bottom: var(--sd-base-padding);
        --animation-padding-bottom: var(--sd-base-padding);
    }
}

.sd-question--paneldynamic:not(.sd-question--empty) {
    & > .sd-question__content {
        & > .sd-question__comment-area {
            padding-bottom: var(--sd-base-padding);
        }
    }
}

.sd-paneldynamic__buttons-container .sd-action-bar {
    width: 100%;
    margin: 0 calc(var(--sjs2-spacing-negative-x150) + var(--sjs2-spacing-negative-x025));
    width: calc(100% + var(--sjs2-spacing-x600));
}

.sd-paneldynamic__panel-footer {
    border-top: none;
    position: relative;
    // top: calc(0.5 * var(--sd-base-vertical-padding));
    padding: var(--sjs2-layout-component-panel-footer-padding-vertical, var(--sjs2-spacing-x300)) var(--sjs2-layout-component-panel-footer-padding-horizontal, var(--sjs2-layout-component-panel-content-area-padding-horizontal));
    margin-right: calc(var(--sjs2-spacing-negative-x150) + var(--sjs2-spacing-negative-x025));
    justify-content: flex-end;
    padding-top: 0;
    margin-top: calc(var(--sjs2-spacing-negative-x300));

    &.sd-action-bar--empty {
        display: none;
    }

    .sd-action-bar__item:not(.sd-action-bar__item--hidden) {
        margin-bottom: var(--sjs2-spacing-negative-x100);
    }
}

.sd-paneldynamic__tabs-container {
    padding-top: var(--sd-base-padding);
    .sd-tabs-toolbar {
        margin-bottom: -1px;
    }
    &:after {
        content: " ";
        display: block;
        height: 1px;
        position: relative;
        background: $border-light;
        bottom: 0;
        // inset-inline-start: calc(-1 * var(--sd-base-padding));
        // width: calc(100% + 2 * var(--sd-base-padding));
    }
}
.sd-paneldynamic__tabs-container--with-header {
    padding-top: var(--sjs2-spacing-x300);
}
/* ... */

